# ETL-dbt-movie-challenge

./: .gitignore  LICENSE  README.md  pyproject.toml
data/mappings/: country_and_region_mappings.json
helpers/: snowflake_helper.py
src/: AWARDS_cleaner.py  BOMOJO_cleaner.py  BOMOJO_scraper.py  DATA_loader.py
src/helpers/: __init__.py  path_helpers.py  snowflake_helper.py  snowflake_helpers.py  web_scraping_helpers.py
